Added logging and group control process specs

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1318,9 +1318,21 @@
 			
 			\subsubsection{Group Control Sub-System}
 				\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Group control subsystem/Add Research Group.jpg}
-				\caption{Admin - Add Research Group}
-			\end{figure}
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Group control subsystem/Add Research Group.jpg}
+					\caption{Admin - Add Research Group}
+				\end{figure}
+				\begin{figure}[H]
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Group control subsystem/Allocate Head of Research Group.jpg}
+					\caption{Admin - Allocate Head of Research Group}
+				\end{figure}
+				\begin{figure}[H]
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Group control subsystem/Set Research Group as Active_Inactive.jpg}
+					\caption{Admin - Set Research Group as Active/Inactive}
+				\end{figure}
+				\begin{figure}[H]
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Group control subsystem/Edit Research Group Information.jpg}
+					\caption{Head of Research/Admin - Edit Research Group Information}
+				\end{figure}
 			\subsubsection{Logging Sub-System}
 				\begin{figure}[H]
 					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Logging subsystem/Archive Logs.jpg}
