Added Github pages to document

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -43,13 +43,13 @@
 			\large{\textbf{Created By:}}\\
 			[2mm]
 			\large{
-				Claudio Da Silva - 14205892\\
-				Arno Grobler - 14011396\\
-				Dillon Heins - 14035538\\
-				Charl Jansen Van Vuuren - 13054903\\
-				Priscilla Madigoe - 13049128\\
-				Bernhard Schuld - 10297902\\
-				Keorapetse Shiko - 12231992
+				\href{https://github.com/ClaudioMDS}{Claudio Da Silva - 14205892}\\
+				\href{https://github.com/ArnoGrobler}{Arno Grobler - 14011396}\\
+				\href{https://github.com/DillonHeins}{Dillon Heins - 14035538}\\
+				\href{https://github.com/u13054903}{Charl Jansen Van Vuuren - 13054903}\\
+				\href{https://github.com/pris264}{Priscilla Madigoe - 13049128}\\
+				\href{https://github.com/BSchuld}{Bernhard Schuld - 10297902}\\
+				\href{https://github.com/Keo11}{Keorapetse Shiko - 12231992}
 			}\\
 			[4cm]
 
