--- a/Notes/AccessAndIntegrationRequirements/AccessAndIntegrationRequirements.tex
+++ b/Notes/AccessAndIntegrationRequirements/AccessAndIntegrationRequirements.tex
@@ -22,19 +22,37 @@ Users will access the P.A.P.E.R.S system through a website front-end on a web se
         \item Flexibility: This should be shown in the database as it being in a state where any change done to the database should not in any way affect the system as a whole. This requires a high level of normalisation in the database to prevent any data anomalies that could occur from using the system.
         \item Affordability: Any request made by the LDAP system, made by the user, should not affect the performance of the system as a whole and should be affordable in a sense to not prevent any other user concurrently using the system from not being able to perform their actions optimally.
     \end{itemize}
-    \subsection{HTTP }
+    \endsubsection{}
+    \subsection{HTTPS}
     HTTP will be used for the web services and in particular HTTPS will be used to make the system more secure. The reason being is that traffic sent over HTTP is highly confidential (user’s usernames and passwords) and thus need to be protected. As the whole web based approach will require the HTTPS protocol, it would need quality requirements:
      \begin{itemize}
         \item Performance: the actual difference in speed compared to a normal HTTP is in insignificant, in fact even a little bit   faster (see annex A) but can take longer in regards to the SSL handshake request that has to be made. This is still something that can be overlooked as security has a higher priority than speed.
         \item Reliability: Since HTTPS is not reliable enough in itself as a connection is never maintained. Thus TCP in conjunction with HTTPS can be used. This will allow you to wait for responses that could inform you if the server has received all the information. 
         \item Scalability: HTTPS must be able to handle many requests sent and received and not slow down the system as a whole when doing so.
-        \item Auditability: Every HTTPS request needs to  logged in an appropriate log file to see what has been requested    
-\subsection{SMTP}
-SMTP (Simple Mail Transfer Protocol) will be used to send email notifications to users of the system. This falls under the notification domain of the system and will be linked to the deadlines set by users in the database. SMPT uses Port 25 to send emails but Port 465 can be used instead if encryption needs to be used to send emails securely (SiteGround, 2016).  
-\subsection{Other Integration Channels}
+        \item Auditability: Every HTTPS request needs to  logged in an appropriate log file to see what has been requested
+        \end{itemize}
+    \endsubsection{}
+    \subsection{SMTP}
+        SMTP (Simple Mail Transfer Protocol) will be used to send email notifications to users of the system. This falls under the notification domain of the system and will be linked to the deadlines set by users in the database. SMPT uses Port 25 to send emails but Port 465 can be used instead if encryption needs to be used to send emails securely (SiteGround, 2016). 
+    \endsubsection{}
+    \subsection{Other Integration Channels}
+          \begin{itemize}
+           \item Javascript/Jquery could be used on the front end to provide a more user friendly and interactive system and to prevent any unauthorised changes to the system. Bootstrap can work on the front end to help maintain a common and consistent user interface.
+           \item JPA (Java Persistence API) is Java specification for accessing, persisting, and managing data in a Java based database that  is what is chosen to work on the back-end. 
+           \item SQL (Structured Query language) can be used if a relational database is used in the place of a java based database. noSQL can thus be used if the database is non relational
+          \end{itemize}
+        \endsubsection{}
+  \newpage
+  \section{References}
   \begin{itemize}
-  
-  \end{itemize}
+  \item Gracion Software. (2016). What is LDAP? Retrieved from Gracion Software: http://www.gracion.com/server/whatldap.html
+  \item LiquidWeb. (2016). Using SFTP and SCP Instead of FTP. Retrieved from LiquidWeb: http://www.liquidweb.com/kb/using-sftp-and-scp-instead-of-ftp/
+  \item Microsoft. (2016). Lightweight Directory Access Protocol. Retrieved from Microsoft: https://msdn.microsoft.com/en-us/library/windows/desktop/aa367008(v=vs.85).aspx
+  \item Murdoch, D. (09, 09 23). HTTPS vs HTTP speed comparison. Retrieved from Stack overflow: http://stackoverflow.com/users/160173/david-murdoch
+  \item SiteGround. (2016). Email Protocols - POP3, SMTP and IMAP. Retrieved from SiteGround: https://www.siteground.com/tutorials/email/pop3-imap-smtp-ports.htm
+  \item W3C. (2016). W3C. Retrieved from W3C: https://www.w3.org/
+\end{itemize}
+
 
 \end{document}
 
