Added various options to Technologies.tex

--- a/Notes/ReferenceArchitecturesAndTechnologies/Technologies.tex
+++ b/Notes/ReferenceArchitecturesAndTechnologies/Technologies.tex
@@ -8,19 +8,24 @@
 \begin{document}
 \section{Technologies}
 
+	For each of the following sections, all technologies we considered are listed. At the end of each section the final choices will be stated and explained why each technology was chosen instead of other options.
+	
 	\subsection{Programming Languages}
-		Options:
 		\begin{itemize}
 			\item Java
-			\item Javascript
-			\item 
+			\item JavaScript including JSON
+			\item Python
+			\item PHP
+			\item C++
+			\item C
+			\item HTML5 %strictly speaking it is a markup language, but I think it fits with this section.
 		\end{itemize}
+		
 	\subsection{Frameworks}
-		Options:
 		\begin{itemize}
-			\item Ajax
-			\item AngularJS
-			\item Bootstrap
+			\item Ajax 
+			\item AngularJS 
+			\item Bootstrap 
 			\item Django
 		\end{itemize}
 
@@ -29,9 +34,20 @@
 			\item jQuery
 		\end{itemize}
 	
+	\subsection{Protocols}
+		\begin{itemize}	
+			\item LDAP (Lightweight Directory Access Protocol)
+			\item HTTPS
+			\item HTTP
+			\item SMTP
+			\item REST (Representational State Transfer)
+		\end{itemize}
+	
+	
 	\subsection{Database Systems}
-		Some sort of relational database system will have to be used.
+		The System will utilize a relational database and will use PostgreSQL to handle queries.
+		
 	\subsection{Operating Systems}
-		The System will be Operating System independent.
+		The System will be created to primarily work on Linux as the entire Computer Department is running on Linux. The System will however be compatible with other operating systems such as Windows, Apple OS.
 
 \end{document}
