--- a/Notes/AccessAndIntegrationRequirements/AccessAndIntegrationRequirements.tex
+++ b/Notes/AccessAndIntegrationRequirements/AccessAndIntegrationRequirements.tex
@@ -12,7 +12,7 @@
 Users will access the P.A.P.E.R.S system through a website front-end on a web server maintained by the Computer Science department. The website can be access off campus through any browser, i.e. Chrome, Mozilla Firefox, Internet Explorer, Safari and Edge. When on the website, the user will have to log in and depending on what user privilege the user has (lecturer, research leader, HOD) the user will access a different user interface, modelled to what the particular user is allowed to access. The website will be under strict standards-compliance that is having the website comply with the World Wide Web Consortium (W3C) (W3C, 2016) so that the website will run on every browser exactly the same. Users can also access the P.A.P.E.R.S system through an android application that uses the same web server as a back-end. The Android system can be used as a replacement for the website and vice versa. It should be able to work on mobile phones or tablets that supports the Android operating system.
 \section{Integration channels}
     \subsection{LDAP}
-    LDAP (Lightweight Directory Access Protocol), is an Internet protocol that email and other programs use to look up information on a server (Gracion Software, 2016). In the case of the P.A.P.E.R.S system LDAP can be used in particular to storing and retrieving user information stored in the database, such as the user’s publications and particulars. The LDAP protocol runs a layer above the TCP/IP layer and provides the mechanisms to connect to, search, and modify Internet directories, such is found in the P.A.P.E.R.S system (Microsoft, 2016). LDAP supports C and C++ programming languages. The aforementioned database will be the main backbone of the system and thus will include quality requirements:
+    LDAP (Lightweight Directory Access Protocol), is an Internet protocol that email and other programs use to look up information on a server (Gracion Software, 2016). In the case of the P.A.P.E.R.S system LDAP can be used in particular to storing and retrieving user information stored in the database, such as the user’s username and password. The LDAP protocol runs a layer above the TCP/IP layer and provides the mechanisms to connect to, search, and modify Internet directories, such is found in the P.A.P.E.R.S system (Microsoft, 2016). LDAP supports C and C++ programming languages. The aforementioned database will be the main backbone of the system and thus will include quality requirements:
     \begin{itemize}  
 
         \item Performance: Accessing data from the database needs to happen as fast as possible. This means an equally fast protocol needs to be used to be used. Since the website and Android application can be run and used offsite from the University of Pretoria, SCP will be used to quickly move around data. FTP could have been used, but it is not as secure as SCP which uses the SSH protocol for authentication (LiquidWeb, 2016). SFTP (a more secure version of FTP) could also be used but because speed as an issue, SCP will be used instead as it is faster (LiquidWeb, 2016).
