--- a/Notes/ReferenceArchitecturesAndTechnologies/ReferenceArchitecture.tex
+++ b/Notes/ReferenceArchitecturesAndTechnologies/ReferenceArchitecture.tex
@@ -57,10 +57,13 @@ In this section we will discuss the reference architecture and frameworks that w
 		\end{itemize}
 	\end{itemize}
 	
-	%\subsubsection{Disadvantages}
-	%\begin{itemize}
+	\subsubsection{Disadvantages}
+	\begin{itemize}
+	\item Uses a lot of system resources which might not necessarily be 
+	\item Relies on server to be running at all times 
+	\item Central point access can choke overall network's access to the server
 	
-	%\end{itemize}
+	\end{itemize}
 	%	\subsection{Service-Orientated Architecture }
 
 	
@@ -75,7 +78,7 @@ In this section we will discuss the reference architecture and frameworks that w
 	\subsection{Django}\label{subsec: Django}
 	Django is a web framework, written in Python which uses the Model-View-Controller architectural pattern, or MVC for short.
 	Django's main aim is to provide a framework on which to build websites that are primarily based on complex databases.
-	The use of Object-relational mapper in Django's MVC is described in \ref{subsec: ORM}. Django processes HTTP requests with a web templating system and regular-expression URL control (View and Controller).
+	The use of Object-relational mapper in Django's MVC is described in \ref{subsec: ORM}. Django processes HTTP requests by means of a web templating system and regular-expression URL control (View and Controller).
 	\\ \\
 	\textbf{Django further includes:}
 	\begin{itemize}
@@ -105,7 +108,7 @@ In this section we will discuss the reference architecture and frameworks that w
 	We prefer to use Django as it does have a slight learner curve, but will ease integrability with regards to our Android application.
 	
 	
-	\subsection{Honarable Mentions}
+	\subsection{Honorable Framework Mentions}
 	\subsubsection{AngularJS}\label{subsubsec: AngularJS}
 		Web-framework making use of client-side Model–View–Controller model. 
 		AngularJS makes use of the MEAN stack for its front-end, consisting of MongoDB database, Express.js web application server framework, Angular.js itself, and Node.js runtime environment.
@@ -113,6 +116,12 @@ In this section we will discuss the reference architecture and frameworks that w
 	\subsubsection{Ruby on Rails}\label{subsubsec: Rails}
 		Ruby based web-framework based on Ruby programming language. "Rails" uses a Model-View-Controller based model and emphasizes the use of JSON and XML for data transfer.
 		Since Ruby has a high learning curve compared to Python for example, we prefer to use Django instead.
+	\subsubsection{Zend Framework}
+	 Zend is an open source, object-oriented web application framework implemented in PHP 5. Zend supports multiple database systems and MVC is the preferred model of development.
+	 Since Zend uses only Object-Orientated PHP5 we decided against this approach as the integration might be difficult for our Android Application.
+	 \subsubsection{Bootstrap}
+	 Bootstrap is a front-end framework for creating websites and applications. It is mainly used for interface development and design. Bootstrap can be used in HTML, CSS and JavaScript. 
+	 We decided on a Server-side approach rather than a front-end approach such as Bootstrap.
 
 	
 %\section{References}
