Added diagram to Architectural Scope

--- a/Notes/Architectural Requirements/ArchitecturalRequirements.tex
+++ b/Notes/Architectural Requirements/ArchitecturalRequirements.tex
@@ -59,13 +59,18 @@
 	\thispagestyle{empty}
 	\tableofcontents
 	\cleardoublepage
-	\listoffigures
-	\cleardoublepage
 	\setcounter{page}{1}
 	\section{Architecture requirements}\label{sec:requirements}
 	
 	\subsection{Architectural scope}\label{subsec:scope}
+	
+		\begin{figure}[H]
+			\includegraphics[width=\linewidth]{../../Diagrams/Architectural Scope/Architectural scope.jpg}
+			\caption{Architectural Scope - Use case for Architectural Scope (Further refined in use cases)}
+		\end{figure}
 
+		\cleardoublepage
+		
 	\subsection{Quality requirements}\label{subsec:quality}
 		\begin{itemize}
 			\item Performance
@@ -123,6 +128,8 @@
 			\end{itemize}
 		\end{itemize}
 
+		\cleardoublepage
+		
 	\subsection{Integration and access channel requirements}\label{subsec:integration}
 		The system will make use of:
 			\begin{itemize}
@@ -148,6 +155,8 @@
 			\end{itemize}
 			The interface is required to be lightweight.
 
+			\cleardoublepage
+			
 	\subsection{Architectural constraints}\label{subsec:constraints}
 		\begin{itemize}
 			\item The system should be developed using only non-proprietary technologies.
