--- a/Notes/Architectural Requirements/ArchitecturalRequirements.tex
+++ b/Notes/Architectural Requirements/ArchitecturalRequirements.tex
@@ -68,7 +68,16 @@
 			\includegraphics[width=\linewidth]{../../Diagrams/Architectural Scope/Architectural scope.jpg}
 			\caption{Architectural Scope - Use case for Architectural Scope (Further refined in use cases)}
 		\end{figure}
-
+		
+		\par The system will be used to keep track of publications made for various research groups in the department, as well as keep track of the authors and the users in charge of things. From this we may later then generate reports on how various groups are doing as well as the department as a whole, and notify authors and users about upcoming deadlines and events.\\
+		
+		\par In the event of dealing with queries on database items such as users and publications, for example insertion and deletion, as well as viewing, the system must first validate that those items do or do not exist in said database. Once that is verified, the queries should be run and the result returned. On success the user should be notified, on failure an appropriate exception should be thrown. Persistence must be maintained throughout the database with very little fault tolerance.\\
+		
+		\par In dealing with reports, data being queried should be validated and the system should ensure that all queried data is recent and correct, halting any new additions during reporting. Reports should be properly archived for later retrieval and properly backed up regularly.\\
+		
+		\par In dealing with notifications, the system should ensure that all emails being used for every author does in fact exist and is a valid email. When sending this email, likely from the mail server at UP, the SMTP connection used must be ensured to be secured and the email should be sent through valid channels as to not appear as spam mail to other users. The system should also validate that it is using the latest deadline updates at all times.
+		
+		
 		\cleardoublepage
 		
 	\subsection{Quality requirements}\label{subsec:quality}
