Core quality requirements added

--- a/Notes/Architectural Requirements/ArchitecturalRequirements.tex
+++ b/Notes/Architectural Requirements/ArchitecturalRequirements.tex
@@ -81,6 +81,24 @@
 		\cleardoublepage
 		
 	\subsection{Quality requirements}\label{subsec:quality}
+		
+		The core quality requirements for this system include in order:
+		
+		\begin{itemize}
+			\item Cost
+			\item Integrability,
+			\item Security,
+			\item Auditability,
+			\item Reliability,
+			\item Usability,
+			\item Maintainability,
+			\item Flexibility
+			\item Performance, and
+			\item Scalability. \newline
+		\end{itemize}
+		
+		An in depth description of the various quality requirements: \newline
+		
 		\begin{itemize}
 			\item Performance
 			\begin{itemize}
